@@ -18,84 +18,68 @@
  */
 package org.apache.fineract.test.stepdef.loan;
 
+import static org.apache.fineract.client.feign.util.FeignCalls.fail;
+import static org.apache.fineract.client.feign.util.FeignCalls.ok;
 import static org.assertj.core.api.Assertions.assertThat;
 
-import com.google.gson.Gson;
 import io.cucumber.datatable.DataTable;
 import io.cucumber.java.en.Then;
 import io.cucumber.java.en.When;
-import java.io.IOException;
 import java.math.BigDecimal;
 import java.math.RoundingMode;
-import java.nio.charset.StandardCharsets;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.stream.Collectors;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.codec.binary.Base64;
 import org.apache.fineract.avro.loan.v1.LoanAccountDelinquencyRangeDataV1;
 import org.apache.fineract.avro.loan.v1.LoanInstallmentDelinquencyBucketDataV1;
+import org.apache.fineract.client.feign.FineractFeignClient;
+import org.apache.fineract.client.feign.util.CallFailedRuntimeException;
+import org.apache.fineract.client.models.DelinquencyRangeData;
 import org.apache.fineract.client.models.GetDelinquencyActionsResponse;
-import org.apache.fineract.client.models.GetDelinquencyRangesResponse;
 import org.apache.fineract.client.models.GetDelinquencyTagHistoryResponse;
 import org.apache.fineract.client.models.GetLoansLoanIdDelinquencyPausePeriod;
 import org.apache.fineract.client.models.GetLoansLoanIdDelinquencySummary;
 import org.apache.fineract.client.models.GetLoansLoanIdLoanInstallmentLevelDelinquency;
 import org.apache.fineract.client.models.GetLoansLoanIdResponse;
-import org.apache.fineract.client.models.GetUsersUserIdResponse;
 import org.apache.fineract.client.models.PostLoansDelinquencyActionRequest;
 import org.apache.fineract.client.models.PostLoansDelinquencyActionResponse;
 import org.apache.fineract.client.models.PostLoansResponse;
-import org.apache.fineract.client.models.PostUsersResponse;
-import org.apache.fineract.client.services.LoansApi;
-import org.apache.fineract.client.services.UsersApi;
-import org.apache.fineract.client.util.JSON;
+import org.apache.fineract.test.api.FineractClientConfiguration;
 import org.apache.fineract.test.data.DelinquencyRange;
 import org.apache.fineract.test.data.LoanStatus;
-import org.apache.fineract.test.helper.ErrorHelper;
 import org.apache.fineract.test.helper.ErrorMessageHelper;
-import org.apache.fineract.test.helper.ErrorResponse;
+import org.apache.fineract.test.helper.Utils;
 import org.apache.fineract.test.messaging.EventAssertion;
 import org.apache.fineract.test.messaging.event.EventCheckHelper;
 import org.apache.fineract.test.messaging.event.loan.delinquency.LoanDelinquencyRangeChangeEvent;
 import org.apache.fineract.test.stepdef.AbstractStepDef;
 import org.apache.fineract.test.support.TestContextKey;
-import org.springframework.beans.factory.annotation.Autowired;
-import retrofit2.Response;
 
 @Slf4j
+@RequiredArgsConstructor
 public class LoanDelinquencyStepDef extends AbstractStepDef {
 
     public static final String DATE_FORMAT = "dd MMMM yyyy";
     public static final String DEFAULT_LOCALE = "en";
     public static final DateTimeFormatter FORMATTER = DateTimeFormatter.ofPattern(DATE_FORMAT);
-    private static final Gson GSON = new JSON().getGson();
-    private static final String PWD_USER_WITH_ROLE = "1234567890Aa!";
 
-    @Autowired
-    private LoansApi loansApi;
-
-    @Autowired
-    private EventAssertion eventAssertion;
-
-    @Autowired
-    private EventCheckHelper eventCheckHelper;
-
-    @Autowired
-    private UsersApi usersApi;
+    private final FineractFeignClient fineractClient;
+    private final FineractClientConfiguration fineractClientConfiguration;
+    private final EventAssertion eventAssertion;
+    private final EventCheckHelper eventCheckHelper;
 
     @Then("Admin checks that delinquency range is: {string} and has delinquentDate {string}")
-    public void checkDelinquencyRange(String range, String delinquentDateExpected) throws IOException {
-        Response<PostLoansResponse> loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
-        long loanId = loanResponse.body().getLoanId();
+    public void checkDelinquencyRange(String range, String delinquentDateExpected) {
+        PostLoansResponse loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
+        Long loanId = loanResponse.getLoanId();
 
-        Response<GetLoansLoanIdResponse> loanDetails = loansApi.retrieveLoan(loanId, false, "", "", "").execute();
-        ErrorHelper.checkSuccessfulApiCall(loanDetails);
-        Integer loanStatus = loanDetails.body().getStatus().getId();
+        GetLoansLoanIdResponse loanDetails = ok(() -> fineractClient.loans().retrieveOneLoan(loanId, Map.of("associations", "collection")));
+        Integer loanStatus = loanDetails.getStatus().getId() == null ? null : loanDetails.getStatus().getId().intValue();
 
         if (!LoanStatus.SUBMITTED_AND_PENDING_APPROVAL.value.equals(loanStatus) && !LoanStatus.APPROVED.value.equals(loanStatus)) {
             String delinquentDateExpectedValue = "".equals(delinquentDateExpected) ? null : delinquentDateExpected;
@@ -108,7 +92,7 @@ public class LoanDelinquencyStepDef extends AbstractStepDef {
         String expectedDelinquencyRangeValue = expectedDelinquencyRange.getValue();
 
         String actualDelinquencyRangeValue = DelinquencyRange.NO_DELINQUENCY.value;
-        GetDelinquencyRangesResponse actualDelinquencyRange = loanDetails.body().getDelinquencyRange();
+        DelinquencyRangeData actualDelinquencyRange = loanDetails.getDelinquencyRange();
         if (actualDelinquencyRange != null) {
             actualDelinquencyRangeValue = actualDelinquencyRange.getClassification();
         }
@@ -119,11 +103,10 @@ public class LoanDelinquencyStepDef extends AbstractStepDef {
     }
 
     @Then("Admin checks that {string}th delinquency range is: {string} and added on: {string} and has delinquentDate {string}")
-    public void checkDelinquencyRange(String nthInList, String range, String addedOnDate, String delinquentDateExpected)
-            throws IOException {
+    public void checkDelinquencyRange(String nthInList, String range, String addedOnDate, String delinquentDateExpected) {
         DateTimeFormatter formatter = DateTimeFormatter.ofPattern(DATE_FORMAT);
-        Response<PostLoansResponse> loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
-        long loanId = loanResponse.body().getLoanId();
+        PostLoansResponse loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
+        Long loanId = loanResponse.getLoanId();
 
         String delinquentDateExpectedValue = "".equals(delinquentDateExpected) ? null : delinquentDateExpected;
         eventAssertion.assertEvent(LoanDelinquencyRangeChangeEvent.class, loanId)
@@ -132,13 +115,13 @@ public class LoanDelinquencyStepDef extends AbstractStepDef {
         DelinquencyRange expectedDelinquencyRange = DelinquencyRange.valueOf(range);
         String expectedDelinquencyRangeValue = expectedDelinquencyRange.getValue();
 
-        Response<List<GetDelinquencyTagHistoryResponse>> delinquencyHistoryDetails = loansApi.getDelinquencyTagHistory(loanId).execute();
-        ErrorHelper.checkSuccessfulApiCall(delinquencyHistoryDetails);
+        List<GetDelinquencyTagHistoryResponse> delinquencyHistoryDetails = ok(
+                () -> fineractClient.loans().retrieveDelinquencyTagHistoryLoan(loanId));
 
         String actualDelinquencyRangeValue = DelinquencyRange.NO_DELINQUENCY.value;
         String actualDelinquencyAddedOnDate = "";
         int i = Integer.parseInt(nthInList) - 1;
-        GetDelinquencyTagHistoryResponse delinquencyTag = delinquencyHistoryDetails.body().get(i);
+        GetDelinquencyTagHistoryResponse delinquencyTag = delinquencyHistoryDetails.get(i);
         if (delinquencyTag != null) {
             actualDelinquencyRangeValue = delinquencyTag.getDelinquencyRange().getClassification();
             actualDelinquencyAddedOnDate = formatter.format(delinquencyTag.getAddedOnDate());
@@ -152,16 +135,14 @@ public class LoanDelinquencyStepDef extends AbstractStepDef {
     }
 
     @Then("Loan delinquency history has the following details:")
-    public void delinquencyHistoryCheck(DataTable table) throws IOException {
+    public void delinquencyHistoryCheck(DataTable table) {
         DateTimeFormatter formatter = DateTimeFormatter.ofPattern(DATE_FORMAT);
         List<List<String>> dataExpected = table.asLists();
 
-        Response<PostLoansResponse> loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
-        long loanId = loanResponse.body().getLoanId();
+        PostLoansResponse loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
+        Long loanId = loanResponse.getLoanId();
 
-        Response<List<GetDelinquencyTagHistoryResponse>> delinquencyHistoryDetails = loansApi.getDelinquencyTagHistory(loanId).execute();
-        ErrorHelper.checkSuccessfulApiCall(delinquencyHistoryDetails);
-        List<GetDelinquencyTagHistoryResponse> body = delinquencyHistoryDetails.body();
+        List<GetDelinquencyTagHistoryResponse> body = ok(() -> fineractClient.loans().retrieveDelinquencyTagHistoryLoan(loanId));
 
         for (int i = 0; i < body.size(); i++) {
             List<String> line = dataExpected.get(i + 1);
@@ -187,9 +168,9 @@ public class LoanDelinquencyStepDef extends AbstractStepDef {
     }
 
     @When("Admin initiate a DELINQUENCY PAUSE with startDate: {string} and endDate: {string}")
-    public void delinquencyPause(String startDate, String endDate) throws IOException {
-        Response<PostLoansResponse> loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
-        long loanId = loanResponse.body().getLoanId();
+    public void delinquencyPause(String startDate, String endDate) {
+        PostLoansResponse loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
+        Long loanId = loanResponse.getLoanId();
 
         PostLoansDelinquencyActionRequest request = new PostLoansDelinquencyActionRequest()//
                 .action("pause")//
@@ -198,17 +179,15 @@ public class LoanDelinquencyStepDef extends AbstractStepDef {
                 .dateFormat(DATE_FORMAT)//
                 .locale(DEFAULT_LOCALE);//
 
-        Response<PostLoansDelinquencyActionResponse> response = loansApi.createLoanDelinquencyAction(loanId, request).execute();
+        PostLoansDelinquencyActionResponse response = ok(() -> fineractClient.loans().createDelinquencyActionLoan(loanId, request));
         testContext().set(TestContextKey.LOAN_DELINQUENCY_ACTION_RESPONSE, response);
-        ErrorHelper.checkSuccessfulApiCall(response);
-
         eventCheckHelper.loanAccountDelinquencyPauseChangedBusinessEventCheck(loanId);
     }
 
     @When("Created user with CREATE_DELINQUENCY_ACTION permission initiate a DELINQUENCY PAUSE with startDate: {string} and endDate: {string}")
-    public void delinquencyPauseWithCreatedUser(String startDate, String endDate) throws IOException {
-        Response<PostLoansResponse> loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
-        long loanId = loanResponse.body().getLoanId();
+    public void delinquencyPauseWithCreatedUser(String startDate, String endDate) {
+        PostLoansResponse loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
+        Long loanId = loanResponse.getLoanId();
 
         PostLoansDelinquencyActionRequest request = new PostLoansDelinquencyActionRequest()//
                 .action("pause")//
@@ -217,27 +196,19 @@ public class LoanDelinquencyStepDef extends AbstractStepDef {
                 .dateFormat(DATE_FORMAT)//
                 .locale(DEFAULT_LOCALE);//
 
-        Map<String, String> headerMap = new HashMap<>();
-        Response<PostUsersResponse> createUserResponse = testContext().get(TestContextKey.CREATED_SIMPLE_USER_RESPONSE);
-        Long createdUserId = createUserResponse.body().getResourceId();
-        Response<GetUsersUserIdResponse> user = usersApi.retrieveOne31(createdUserId).execute();
-        ErrorHelper.checkSuccessfulApiCall(user);
-        String authorizationString = user.body().getUsername() + ":" + PWD_USER_WITH_ROLE;
-        Base64 base64 = new Base64();
-        headerMap.put("Authorization",
-                "Basic " + new String(base64.encode(authorizationString.getBytes(StandardCharsets.UTF_8)), StandardCharsets.UTF_8));
+        String username = testContext().get(TestContextKey.CREATED_SIMPLE_USER_USERNAME);
+        String password = testContext().get(TestContextKey.CREATED_SIMPLE_USER_PASSWORD);
+        FineractFeignClient userClient = fineractClientConfiguration.fineractFeignClientForUser(username, password);
 
-        Response<PostLoansDelinquencyActionResponse> response = loansApi.createLoanDelinquencyAction(loanId, request, headerMap).execute();
+        PostLoansDelinquencyActionResponse response = ok(() -> userClient.loans().createDelinquencyActionLoan(loanId, request));
         testContext().set(TestContextKey.LOAN_DELINQUENCY_ACTION_RESPONSE, response);
-        ErrorHelper.checkSuccessfulApiCall(response);
-
         eventCheckHelper.loanAccountDelinquencyPauseChangedBusinessEventCheck(loanId);
     }
 
     @Then("Created user with no CREATE_DELINQUENCY_ACTION permission gets an error when initiate a DELINQUENCY PAUSE with startDate: {string} and endDate: {string}")
-    public void delinquencyPauseWithCreatedUserNOPermissionError(String startDate, String endDate) throws IOException {
-        Response<PostLoansResponse> loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
-        long loanId = loanResponse.body().getLoanId();
+    public void delinquencyPauseWithCreatedUserNOPermissionError(String startDate, String endDate) {
+        PostLoansResponse loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
+        Long loanId = loanResponse.getLoanId();
 
         int errorCodeExpected = 403;
         String errorMessageExpected = "User has no authority to CREATE delinquency_actions";
@@ -249,35 +220,26 @@ public class LoanDelinquencyStepDef extends AbstractStepDef {
                 .dateFormat(DATE_FORMAT)//
                 .locale(DEFAULT_LOCALE);//
 
-        Map<String, String> headerMap = new HashMap<>();
-        Response<PostUsersResponse> createUserResponse = testContext().get(TestContextKey.CREATED_SIMPLE_USER_RESPONSE);
-        Long createdUserId = createUserResponse.body().getResourceId();
-        Response<GetUsersUserIdResponse> user = usersApi.retrieveOne31(createdUserId).execute();
-        ErrorHelper.checkSuccessfulApiCall(user);
-        String authorizationString = user.body().getUsername() + ":" + PWD_USER_WITH_ROLE;
-        Base64 base64 = new Base64();
-        headerMap.put("Authorization",
-                "Basic " + new String(base64.encode(authorizationString.getBytes(StandardCharsets.UTF_8)), StandardCharsets.UTF_8));
+        String username = testContext().get(TestContextKey.CREATED_SIMPLE_USER_USERNAME);
+        String password = testContext().get(TestContextKey.CREATED_SIMPLE_USER_PASSWORD);
+        FineractFeignClient userClient = fineractClientConfiguration.fineractFeignClientForUser(username, password);
 
-        Response<PostLoansDelinquencyActionResponse> response = loansApi.createLoanDelinquencyAction(loanId, request, headerMap).execute();
-        testContext().set(TestContextKey.LOAN_DELINQUENCY_ACTION_RESPONSE, response);
-        int errorCodeActual = response.code();
-        String errorBody = response.errorBody().string();
-        ErrorResponse errorResponse = GSON.fromJson(errorBody, ErrorResponse.class);
-        String errorMessageActual = errorResponse.getErrors().get(0).getDeveloperMessage();
+        CallFailedRuntimeException exception = fail(() -> userClient.loans().createDelinquencyActionLoan(loanId, request));
 
-        assertThat(errorCodeActual).as(ErrorMessageHelper.wrongErrorCode(errorCodeActual, errorCodeExpected)).isEqualTo(errorCodeExpected);
-        assertThat(errorMessageActual).as(ErrorMessageHelper.wrongErrorMessage(errorMessageActual, errorMessageExpected))
-                .isEqualTo(errorMessageExpected);
+        assertThat(exception.getStatus()).as(ErrorMessageHelper.wrongErrorCode(exception.getStatus(), errorCodeExpected))
+                .isEqualTo(errorCodeExpected);
+        assertThat(exception.getDeveloperMessage())
+                .as(ErrorMessageHelper.wrongErrorMessage(exception.getDeveloperMessage(), errorMessageExpected))
+                .contains(errorMessageExpected);
 
-        log.debug("ERROR CODE: {}", errorCodeActual);
-        log.debug("ERROR MESSAGE: {}", errorMessageActual);
+        log.debug("ERROR CODE: {}", exception.getStatus());
+        log.debug("ERROR MESSAGE: {}", exception.getDeveloperMessage());
     }
 
     @When("Admin initiate a DELINQUENCY RESUME with startDate: {string}")
-    public void delinquencyResume(String startDate) throws IOException {
-        Response<PostLoansResponse> loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
-        long loanId = loanResponse.body().getLoanId();
+    public void delinquencyResume(String startDate) {
+        PostLoansResponse loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
+        Long loanId = loanResponse.getLoanId();
 
         PostLoansDelinquencyActionRequest request = new PostLoansDelinquencyActionRequest()//
                 .action("resume")//
@@ -285,18 +247,16 @@ public class LoanDelinquencyStepDef extends AbstractStepDef {
                 .dateFormat(DATE_FORMAT)//
                 .locale(DEFAULT_LOCALE);//
 
-        Response<PostLoansDelinquencyActionResponse> response = loansApi.createLoanDelinquencyAction(loanId, request).execute();
+        PostLoansDelinquencyActionResponse response = ok(() -> fineractClient.loans().createDelinquencyActionLoan(loanId, request));
         testContext().set(TestContextKey.LOAN_DELINQUENCY_ACTION_RESPONSE, response);
-        ErrorHelper.checkSuccessfulApiCall(response);
-
         eventCheckHelper.loanAccountDelinquencyPauseChangedBusinessEventCheck(loanId);
     }
 
     @When("Admin initiate a DELINQUENCY PAUSE by loanExternalId with startDate: {string} and endDate: {string}")
-    public void delinquencyPauseByLoanExternalId(String startDate, String endDate) throws IOException {
-        Response<PostLoansResponse> loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
-        String loanExternalId = loanResponse.body().getResourceExternalId();
-        long loanId = loanResponse.body().getLoanId();
+    public void delinquencyPauseByLoanExternalId(String startDate, String endDate) {
+        PostLoansResponse loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
+        String loanExternalId = loanResponse.getResourceExternalId();
+        Long loanId = loanResponse.getLoanId();
 
         PostLoansDelinquencyActionRequest request = new PostLoansDelinquencyActionRequest()//
                 .action("pause")//
@@ -305,18 +265,17 @@ public class LoanDelinquencyStepDef extends AbstractStepDef {
                 .dateFormat(DATE_FORMAT)//
                 .locale(DEFAULT_LOCALE);//
 
-        Response<PostLoansDelinquencyActionResponse> response = loansApi.createLoanDelinquencyAction1(loanExternalId, request).execute();
+        PostLoansDelinquencyActionResponse response = ok(
+                () -> fineractClient.loans().createDelinquencyActionLoanByExternalId(loanExternalId, request));
         testContext().set(TestContextKey.LOAN_DELINQUENCY_ACTION_RESPONSE, response);
-        ErrorHelper.checkSuccessfulApiCall(response);
-
         eventCheckHelper.loanAccountDelinquencyPauseChangedBusinessEventCheck(loanId);
     }
 
     @When("Admin initiate a DELINQUENCY RESUME by loanExternalId with startDate: {string}")
-    public void delinquencyResumeByLoanExternalId(String startDate) throws IOException {
-        Response<PostLoansResponse> loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
-        String loanExternalId = loanResponse.body().getResourceExternalId();
-        long loanId = loanResponse.body().getLoanId();
+    public void delinquencyResumeByLoanExternalId(String startDate) {
+        PostLoansResponse loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
+        String loanExternalId = loanResponse.getResourceExternalId();
+        Long loanId = loanResponse.getLoanId();
 
         PostLoansDelinquencyActionRequest request = new PostLoansDelinquencyActionRequest()//
                 .action("resume")//
@@ -324,23 +283,22 @@ public class LoanDelinquencyStepDef extends AbstractStepDef {
                 .dateFormat(DATE_FORMAT)//
                 .locale(DEFAULT_LOCALE);//
 
-        Response<PostLoansDelinquencyActionResponse> response = loansApi.createLoanDelinquencyAction1(loanExternalId, request).execute();
+        PostLoansDelinquencyActionResponse response = ok(
+                () -> fineractClient.loans().createDelinquencyActionLoanByExternalId(loanExternalId, request));
         testContext().set(TestContextKey.LOAN_DELINQUENCY_ACTION_RESPONSE, response);
-        ErrorHelper.checkSuccessfulApiCall(response);
-
         eventCheckHelper.loanAccountDelinquencyPauseChangedBusinessEventCheck(loanId);
     }
 
     @Then("Delinquency-actions have the following data:")
-    public void getDelinquencyActionData(DataTable table) throws IOException {
-        Response<PostLoansResponse> loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
-        long loanId = loanResponse.body().getLoanId();
+    public void getDelinquencyActionData(DataTable table) {
+        PostLoansResponse loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
+        Long loanId = loanResponse.getLoanId();
 
         List<List<String>> data = table.asLists();
         int nrOfLinesExpected = data.size() - 1;
 
-        Response<List<GetDelinquencyActionsResponse>> response = loansApi.getLoanDelinquencyActions(loanId).execute();
-        int nrOfLinesActual = response.body().size();
+        List<GetDelinquencyActionsResponse> response = ok(() -> fineractClient.loans().retrieveDelinquencyActionsLoan(loanId));
+        int nrOfLinesActual = response.size();
 
         assertThat(nrOfLinesActual)//
                 .as(ErrorMessageHelper.wrongNumberOfLinesInDelinquencyActions(nrOfLinesActual, nrOfLinesExpected))//
@@ -349,7 +307,7 @@ public class LoanDelinquencyStepDef extends AbstractStepDef {
         for (int i = 1; i < data.size(); i++) {
             List<String> expectedValues = data.get(i);
 
-            GetDelinquencyActionsResponse lineActual = response.body().get(i - 1);
+            GetDelinquencyActionsResponse lineActual = response.get(i - 1);
 
             List<String> actualValues = new ArrayList<>();
             actualValues.add(Objects.requireNonNull(lineActual.getAction()));
@@ -363,9 +321,9 @@ public class LoanDelinquencyStepDef extends AbstractStepDef {
     }
 
     @Then("Initiating a delinquency-action other than PAUSE or RESUME in action field results an error - startDate: {string}, endDate: {string}")
-    public void actionFieldError(String startDate, String endDate) throws IOException {
-        Response<PostLoansResponse> loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
-        long loanId = loanResponse.body().getLoanId();
+    public void actionFieldError(String startDate, String endDate) {
+        PostLoansResponse loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
+        Long loanId = loanResponse.getLoanId();
 
         PostLoansDelinquencyActionRequest request = new PostLoansDelinquencyActionRequest()//
                 .action("TEST")//
@@ -374,16 +332,15 @@ public class LoanDelinquencyStepDef extends AbstractStepDef {
                 .dateFormat(DATE_FORMAT)//
                 .locale(DEFAULT_LOCALE);//
 
-        Response<PostLoansDelinquencyActionResponse> response = loansApi.createLoanDelinquencyAction(loanId, request).execute();
         int errorCodeExpected = 400;
         String errorMessageExpected = "Invalid Delinquency Action: TEST";
-        errorMessageAssertation(response, errorCodeExpected, errorMessageExpected);
+        errorMessageAssertationFeign(loanId, request, errorCodeExpected, errorMessageExpected);
     }
 
     @Then("Initiating a DELINQUENCY PAUSE with startDate before the actual business date results an error - startDate: {string}, endDate: {string}")
-    public void delinquencyPauseStartDateError(String startDate, String endDate) throws IOException {
-        Response<PostLoansResponse> loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
-        long loanId = loanResponse.body().getLoanId();
+    public void delinquencyPauseStartDateError(String startDate, String endDate) {
+        PostLoansResponse loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
+        Long loanId = loanResponse.getLoanId();
 
         PostLoansDelinquencyActionRequest request = new PostLoansDelinquencyActionRequest()//
                 .action("pause")//
@@ -392,16 +349,15 @@ public class LoanDelinquencyStepDef extends AbstractStepDef {
                 .dateFormat(DATE_FORMAT)//
                 .locale(DEFAULT_LOCALE);//
 
-        Response<PostLoansDelinquencyActionResponse> response = loansApi.createLoanDelinquencyAction(loanId, request).execute();
         int errorCodeExpected = 400;
         String errorMessageExpected = "Start date of pause period must be in the future";
-        errorMessageAssertation(response, errorCodeExpected, errorMessageExpected);
+        errorMessageAssertationFeign(loanId, request, errorCodeExpected, errorMessageExpected);
     }
 
     @Then("Initiating a DELINQUENCY PAUSE on a non-active loan results an error - startDate: {string}, endDate: {string}")
-    public void delinquencyPauseNonActiveLoanError(String startDate, String endDate) throws IOException {
-        Response<PostLoansResponse> loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
-        long loanId = loanResponse.body().getLoanId();
+    public void delinquencyPauseNonActiveLoanError(String startDate, String endDate) {
+        PostLoansResponse loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
+        Long loanId = loanResponse.getLoanId();
 
         PostLoansDelinquencyActionRequest request = new PostLoansDelinquencyActionRequest()//
                 .action("pause")//
@@ -410,16 +366,15 @@ public class LoanDelinquencyStepDef extends AbstractStepDef {
                 .dateFormat(DATE_FORMAT)//
                 .locale(DEFAULT_LOCALE);//
 
-        Response<PostLoansDelinquencyActionResponse> response = loansApi.createLoanDelinquencyAction(loanId, request).execute();
         int errorCodeExpected = 400;
         String errorMessageExpected = "Delinquency actions can be created only for active loans.";
-        errorMessageAssertation(response, errorCodeExpected, errorMessageExpected);
+        errorMessageAssertationFeign(loanId, request, errorCodeExpected, errorMessageExpected);
     }
 
     @Then("Initiating a DELINQUENCY RESUME on a non-active loan results an error - startDate: {string}")
-    public void delinquencyResumeNonActiveLoanError(String startDate) throws IOException {
-        Response<PostLoansResponse> loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
-        long loanId = loanResponse.body().getLoanId();
+    public void delinquencyResumeNonActiveLoanError(String startDate) {
+        PostLoansResponse loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
+        Long loanId = loanResponse.getLoanId();
 
         PostLoansDelinquencyActionRequest request = new PostLoansDelinquencyActionRequest()//
                 .action("resume")//
@@ -427,16 +382,15 @@ public class LoanDelinquencyStepDef extends AbstractStepDef {
                 .dateFormat(DATE_FORMAT)//
                 .locale(DEFAULT_LOCALE);//
 
-        Response<PostLoansDelinquencyActionResponse> response = loansApi.createLoanDelinquencyAction(loanId, request).execute();
         int errorCodeExpected = 400;
         String errorMessageExpected = "Delinquency actions can be created only for active loans.";
-        errorMessageAssertation(response, errorCodeExpected, errorMessageExpected);
+        errorMessageAssertationFeign(loanId, request, errorCodeExpected, errorMessageExpected);
     }
 
     @Then("Overlapping PAUSE periods result an error - startDate: {string}, endDate: {string}")
-    public void delinquencyPauseOverlappingError(String startDate, String endDate) throws IOException {
-        Response<PostLoansResponse> loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
-        long loanId = loanResponse.body().getLoanId();
+    public void delinquencyPauseOverlappingError(String startDate, String endDate) {
+        PostLoansResponse loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
+        Long loanId = loanResponse.getLoanId();
 
         PostLoansDelinquencyActionRequest request = new PostLoansDelinquencyActionRequest()//
                 .action("pause")//
@@ -445,16 +399,15 @@ public class LoanDelinquencyStepDef extends AbstractStepDef {
                 .dateFormat(DATE_FORMAT)//
                 .locale(DEFAULT_LOCALE);//
 
-        Response<PostLoansDelinquencyActionResponse> response = loansApi.createLoanDelinquencyAction(loanId, request).execute();
         int errorCodeExpected = 400;
         String errorMessageExpected = "Delinquency pause period cannot overlap with another pause period";
-        errorMessageAssertation(response, errorCodeExpected, errorMessageExpected);
+        errorMessageAssertationFeign(loanId, request, errorCodeExpected, errorMessageExpected);
     }
 
     @Then("Initiating a DELINQUENCY RESUME without an active PAUSE period results an error - startDate: {string}")
-    public void delinquencyResumeWithoutPauseError(String startDate) throws IOException {
-        Response<PostLoansResponse> loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
-        long loanId = loanResponse.body().getLoanId();
+    public void delinquencyResumeWithoutPauseError(String startDate) {
+        PostLoansResponse loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
+        Long loanId = loanResponse.getLoanId();
 
         PostLoansDelinquencyActionRequest request = new PostLoansDelinquencyActionRequest()//
                 .action("resume")//
@@ -462,16 +415,15 @@ public class LoanDelinquencyStepDef extends AbstractStepDef {
                 .dateFormat(DATE_FORMAT)//
                 .locale(DEFAULT_LOCALE);//
 
-        Response<PostLoansDelinquencyActionResponse> response = loansApi.createLoanDelinquencyAction(loanId, request).execute();
         int errorCodeExpected = 400;
         String errorMessageExpected = "Resume Delinquency Action can only be created during an active pause";
-        errorMessageAssertation(response, errorCodeExpected, errorMessageExpected);
+        errorMessageAssertationFeign(loanId, request, errorCodeExpected, errorMessageExpected);
     }
 
     @Then("Initiating a DELINQUENCY RESUME with start date other than actual business date results an error - startDate: {string}")
-    public void delinquencyResumeStartDateError(String startDate) throws IOException {
-        Response<PostLoansResponse> loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
-        long loanId = loanResponse.body().getLoanId();
+    public void delinquencyResumeStartDateError(String startDate) {
+        PostLoansResponse loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
+        Long loanId = loanResponse.getLoanId();
 
         PostLoansDelinquencyActionRequest request = new PostLoansDelinquencyActionRequest()//
                 .action("resume")//
@@ -479,16 +431,15 @@ public class LoanDelinquencyStepDef extends AbstractStepDef {
                 .dateFormat(DATE_FORMAT)//
                 .locale(DEFAULT_LOCALE);//
 
-        Response<PostLoansDelinquencyActionResponse> response = loansApi.createLoanDelinquencyAction(loanId, request).execute();
         int errorCodeExpected = 400;
         String errorMessageExpected = "Start date of the Resume Delinquency action must be the current business date";
-        errorMessageAssertation(response, errorCodeExpected, errorMessageExpected);
+        errorMessageAssertationFeign(loanId, request, errorCodeExpected, errorMessageExpected);
     }
 
     @Then("Initiating a DELINQUENCY RESUME with an endDate results an error - startDate: {string}, endDate: {string}")
-    public void delinquencyResumeWithEndDateError(String startDate, String endDate) throws IOException {
-        Response<PostLoansResponse> loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
-        long loanId = loanResponse.body().getLoanId();
+    public void delinquencyResumeWithEndDateError(String startDate, String endDate) {
+        PostLoansResponse loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
+        Long loanId = loanResponse.getLoanId();
 
         PostLoansDelinquencyActionRequest request = new PostLoansDelinquencyActionRequest()//
                 .action("resume")//
@@ -497,63 +448,101 @@ public class LoanDelinquencyStepDef extends AbstractStepDef {
                 .dateFormat(DATE_FORMAT)//
                 .locale(DEFAULT_LOCALE);//
 
-        Response<PostLoansDelinquencyActionResponse> response = loansApi.createLoanDelinquencyAction(loanId, request).execute();
         int errorCodeExpected = 400;
         String errorMessageExpected = "Resume Delinquency action can not have end date";
-        errorMessageAssertation(response, errorCodeExpected, errorMessageExpected);
+        errorMessageAssertationFeign(loanId, request, errorCodeExpected, errorMessageExpected);
     }
 
     @Then("Installment level delinquency event has correct data")
-    public void installmentLevelDelinquencyEventCheck() throws IOException {
-        Response<PostLoansResponse> loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
-        long loanId = loanResponse.body().getLoanId();
+    public void installmentLevelDelinquencyEventCheck() {
+        PostLoansResponse loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
+        Long loanId = loanResponse.getLoanId();
 
         eventCheckHelper.installmentLevelDelinquencyRangeChangeEventCheck(loanId);
     }
 
     @Then("INSTALLMENT level delinquency is null")
-    public void installmentLevelDelinquencyNull() throws IOException {
-        Response<PostLoansResponse> loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
-        long loanId = loanResponse.body().getLoanId();
+    public void installmentLevelDelinquencyNull() {
+        PostLoansResponse loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
+        Long loanId = loanResponse.getLoanId();
 
-        Response<GetLoansLoanIdResponse> loanDetails = loansApi.retrieveLoan(loanId, false, "", "", "").execute();
-        ErrorHelper.checkSuccessfulApiCall(loanDetails);
-        List<GetLoansLoanIdLoanInstallmentLevelDelinquency> installmentLevelDelinquency = loanDetails.body().getDelinquent()
-                .getInstallmentLevelDelinquency() == null ? null : loanDetails.body().getDelinquent().getInstallmentLevelDelinquency();
+        GetLoansLoanIdResponse loanDetails = ok(() -> fineractClient.loans().retrieveOneLoan(loanId, Map.of("associations", "collection")));
+        List<GetLoansLoanIdLoanInstallmentLevelDelinquency> installmentLevelDelinquency = loanDetails.getDelinquent()
+                .getInstallmentLevelDelinquency() == null ? null : loanDetails.getDelinquent().getInstallmentLevelDelinquency();
         assertThat(installmentLevelDelinquency).isNull();
     }
 
     @Then("Loan has the following LOAN level delinquency data:")
-    public void loanDelinquencyDataCheck(DataTable table) throws IOException {
-        Response<PostLoansResponse> loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
-        long loanId = loanResponse.body().getLoanId();
+    public void loanDelinquencyDataCheck(DataTable table) {
+        PostLoansResponse loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
+        Long loanId = loanResponse.getLoanId();
 
         List<String> expectedValuesList = table.asLists().get(1);
-        DelinquencyRange expectedDelinquencyRange = DelinquencyRange.valueOf(expectedValuesList.get(0));
+        DelinquencyRange expectedDelinquencyRange = DelinquencyRange.valueOf(expectedValuesList.getFirst());
         String expectedDelinquencyRangeValue = expectedDelinquencyRange.getValue();
         expectedValuesList.set(0, expectedDelinquencyRangeValue);
 
-        Response<GetLoansLoanIdResponse> loanDetails = loansApi.retrieveLoan(loanId, false, "", "", "").execute();
-        ErrorHelper.checkSuccessfulApiCall(loanDetails);
-        String actualDelinquencyRangeValue = loanDetails.body().getDelinquencyRange() == null ? "NO_DELINQUENCY"
-                : loanDetails.body().getDelinquencyRange().getClassification();
-        GetLoansLoanIdDelinquencySummary delinquent = loanDetails.body().getDelinquent();
-        List<String> actualValuesList = List.of(actualDelinquencyRangeValue, delinquent.getDelinquentAmount().toString(),
-                delinquent.getDelinquentDate() == null ? "null" : FORMATTER.format(delinquent.getDelinquentDate()),
-                delinquent.getDelinquentDays().toString(), delinquent.getPastDueDays().toString());
+        GetLoansLoanIdResponse loanDetails = ok(() -> fineractClient.loans().retrieveOneLoan(loanId, Map.of("associations", "collection")));
+        String actualDelinquencyRangeValue = loanDetails.getDelinquencyRange() == null ? "NO_DELINQUENCY"
+                : loanDetails.getDelinquencyRange().getClassification();
+        GetLoansLoanIdDelinquencySummary delinquent = loanDetails.getDelinquent();
+        assertThat(delinquent).isNotNull();
+        String delinquentAmount = delinquent.getDelinquentAmount() == null ? null
+                : new Utils.DoubleFormatter(delinquent.getDelinquentAmount().doubleValue()).format();
+
+        assertThat(actualDelinquencyRangeValue).isNotNull();
+        assertThat(delinquentAmount).isNotNull();
+        assertThat(delinquent.getDelinquentDays()).isNotNull();
+        assertThat(delinquent.getPastDueDays()).isNotNull();
+        List<String> actualValuesList;
+        if (expectedValuesList.size() == 6) {
+            actualValuesList = List.of(actualDelinquencyRangeValue, delinquentAmount,
+                    delinquent.getDelinquentDate() == null ? "null" : FORMATTER.format(delinquent.getDelinquentDate()),
+                    delinquent.getPastDueDate() == null ? "null" : FORMATTER.format(delinquent.getPastDueDate()),
+                    delinquent.getDelinquentDays().toString(), delinquent.getPastDueDays().toString());
+        } else {
+            actualValuesList = List.of(actualDelinquencyRangeValue, delinquentAmount,
+                    delinquent.getDelinquentDate() == null ? "null" : FORMATTER.format(delinquent.getDelinquentDate()),
+                    delinquent.getDelinquentDays().toString(), delinquent.getPastDueDays().toString());
+        }
+
+        assertThat(actualValuesList).as(ErrorMessageHelper.wrongValueInLoanLevelDelinquencyData(actualValuesList, expectedValuesList))
+                .isEqualTo(expectedValuesList);
+    }
+
+    @Then("Loan has the following LOAN level next payment due data:")
+    public void loanNextPaymentDataCheck(DataTable table) {
+        PostLoansResponse loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
+        Long loanId = loanResponse.getLoanId();
+
+        List<String> expectedValuesList = table.asLists().get(1);
+        DelinquencyRange expectedDelinquencyRange = DelinquencyRange.valueOf(expectedValuesList.getFirst());
+        String expectedDelinquencyRangeValue = expectedDelinquencyRange.getValue();
+        expectedValuesList.set(0, expectedDelinquencyRangeValue);
+
+        GetLoansLoanIdResponse loanDetails = ok(() -> fineractClient.loans().retrieveOneLoan(loanId, Map.of("associations", "collection")));
+
+        String actualDelinquencyRangeValue = loanDetails.getDelinquencyRange() == null ? "NO_DELINQUENCY"
+                : loanDetails.getDelinquencyRange().getClassification();
+        GetLoansLoanIdDelinquencySummary delinquent = loanDetails.getDelinquent();
+
+        String delinquentAmount = delinquent.getNextPaymentAmount() == null ? null
+                : new Utils.DoubleFormatter(delinquent.getNextPaymentAmount().doubleValue()).format();
+        List<String> actualValuesList = List.of(actualDelinquencyRangeValue,
+                delinquent.getNextPaymentDueDate() == null ? "null" : FORMATTER.format(delinquent.getNextPaymentDueDate()),
+                delinquentAmount);
 
         assertThat(actualValuesList).as(ErrorMessageHelper.wrongValueInLoanLevelDelinquencyData(actualValuesList, expectedValuesList))
                 .isEqualTo(expectedValuesList);
     }
 
     @Then("Loan has the following INSTALLMENT level delinquency data:")
-    public void loanDelinquencyInstallmentLevelDataCheck(DataTable table) throws IOException {
-        Response<PostLoansResponse> loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
-        long loanId = loanResponse.body().getLoanId();
+    public void loanDelinquencyInstallmentLevelDataCheck(DataTable table) {
+        PostLoansResponse loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
+        Long loanId = loanResponse.getLoanId();
 
-        Response<GetLoansLoanIdResponse> loanDetails = loansApi.retrieveLoan(loanId, false, "", "", "").execute();
-        ErrorHelper.checkSuccessfulApiCall(loanDetails);
-        List<GetLoansLoanIdLoanInstallmentLevelDelinquency> installmentLevelDelinquency = loanDetails.body().getDelinquent()
+        GetLoansLoanIdResponse loanDetails = ok(() -> fineractClient.loans().retrieveOneLoan(loanId, Map.of("associations", "collection")));
+        List<GetLoansLoanIdLoanInstallmentLevelDelinquency> installmentLevelDelinquency = loanDetails.getDelinquent()
                 .getInstallmentLevelDelinquency();
 
         List<List<String>> data = table.asLists();
@@ -561,14 +550,13 @@ public class LoanDelinquencyStepDef extends AbstractStepDef {
                 .as(ErrorMessageHelper.nrOfLinesWrongInInstallmentLevelDelinquencyData(installmentLevelDelinquency.size(), data.size() - 1))
                 .isEqualTo(data.size() - 1);
         for (int i = 1; i < data.size(); i++) {
-            DelinquencyRange expectedDelinquencyRange = DelinquencyRange.valueOf(data.get(i).get(1));
+            DelinquencyRange expectedDelinquencyRange = DelinquencyRange.valueOf(data.get(i).get(0));
             String expectedDelinquencyRangeValue = expectedDelinquencyRange.getValue();
 
             List<String> expectedValuesList = data.get(i);
-            expectedValuesList.set(1, expectedDelinquencyRangeValue);
+            expectedValuesList.set(0, expectedDelinquencyRangeValue);
 
-            List<String> actualValuesList = List.of(String.valueOf(installmentLevelDelinquency.get(i - 1).getRangeId()),
-                    installmentLevelDelinquency.get(i - 1).getClassification(),
+            List<String> actualValuesList = List.of(installmentLevelDelinquency.get(i - 1).getClassification(),
                     installmentLevelDelinquency.get(i - 1).getDelinquentAmount().setScale(2, RoundingMode.HALF_DOWN).toString());
             assertThat(actualValuesList)
                     .as(ErrorMessageHelper.wrongValueInLineInInstallmentLevelDelinquencyData(i, actualValuesList, expectedValuesList))
@@ -577,16 +565,14 @@ public class LoanDelinquencyStepDef extends AbstractStepDef {
     }
 
     @Then("Loan Delinquency pause periods has the following data:")
-    public void loanDelinquencyPauseDataCheck(DataTable table) throws IOException {
-        Response<PostLoansResponse> loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
-        long loanId = loanResponse.body().getLoanId();
+    public void loanDelinquencyPauseDataCheck(DataTable table) {
+        PostLoansResponse loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
+        Long loanId = loanResponse.getLoanId();
 
         List<List<String>> expectedData = table.asLists();
-        Response<GetLoansLoanIdResponse> loanDetails = loansApi.retrieveLoan(loanId, false, "", "", "").execute();
-        ErrorHelper.checkSuccessfulApiCall(loanDetails);
+        GetLoansLoanIdResponse loanDetails = ok(() -> fineractClient.loans().retrieveOneLoan(loanId, Map.of("associations", "collection")));
 
-        List<GetLoansLoanIdDelinquencyPausePeriod> delinquencyPausePeriods = loanDetails.body().getDelinquent()
-                .getDelinquencyPausePeriods();
+        List<GetLoansLoanIdDelinquencyPausePeriod> delinquencyPausePeriods = loanDetails.getDelinquent().getDelinquencyPausePeriods();
 
         assertThat(delinquencyPausePeriods.size())
                 .as(ErrorMessageHelper.nrOfLinesWrongInLoanDelinquencyPauseData(delinquencyPausePeriods.size(), expectedData.size() - 1))
@@ -605,21 +591,20 @@ public class LoanDelinquencyStepDef extends AbstractStepDef {
     }
 
     @Then("Loan details delinquent.nextPaymentDueDate will be {string}")
-    public void nextPaymentDueDateCheck(String expectedDate) throws IOException {
-        Response<PostLoansResponse> loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
-        long loanId = loanResponse.body().getLoanId();
+    public void nextPaymentDueDateCheck(String expectedDate) {
+        PostLoansResponse loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
+        Long loanId = loanResponse.getLoanId();
 
-        Response<GetLoansLoanIdResponse> loanDetails = loansApi.retrieveLoan(loanId, false, "", "", "").execute();
-        ErrorHelper.checkSuccessfulApiCall(loanDetails);
-        String actualDate = FORMATTER.format(loanDetails.body().getDelinquent().getNextPaymentDueDate());
+        GetLoansLoanIdResponse loanDetails = ok(() -> fineractClient.loans().retrieveOneLoan(loanId, Map.of("associations", "collection")));
+        String actualDate = FORMATTER.format(loanDetails.getDelinquent().getNextPaymentDueDate());
 
         assertThat(actualDate).as(ErrorMessageHelper.wrongDataInNextPaymentDueDate(actualDate, expectedDate)).isEqualTo(expectedDate);
     }
 
     @Then("LoanAccountDelinquencyRangeDataV1 has delinquencyRange field with value {string}")
     public void checkDelinquencyRangeInEvent(String expectedRange) {
-        Response<PostLoansResponse> loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
-        long loanId = loanResponse.body().getLoanId();
+        PostLoansResponse loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
+        Long loanId = loanResponse.getLoanId();
 
         DelinquencyRange expectedDelinquencyRange = DelinquencyRange.valueOf(expectedRange);
         String expectedDelinquencyRangeValue = expectedDelinquencyRange.getValue();
@@ -635,13 +620,13 @@ public class LoanDelinquencyStepDef extends AbstractStepDef {
     }
 
     @Then("LoanDelinquencyRangeChangeBusinessEvent has the same Delinquency range, date and amount as in LoanDetails on both loan- and installment-level")
-    public void checkDelinquencyRangeInEvent() throws IOException {
-        Response<PostLoansResponse> loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
-        long loanId = loanResponse.body().getLoanId();
+    public void checkDelinquencyRangeInEvent() {
+        PostLoansResponse loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
+        Long loanId = loanResponse.getLoanId();
 
-        Response<GetLoansLoanIdResponse> loanDetails = loansApi.retrieveLoan(loanId, false, "", "", "").execute();
-        GetDelinquencyRangesResponse delinquencyRange = loanDetails.body().getDelinquencyRange();
-        GetLoansLoanIdDelinquencySummary delinquent = loanDetails.body().getDelinquent();
+        GetLoansLoanIdResponse loanDetails = ok(() -> fineractClient.loans().retrieveOneLoan(loanId, Map.of("associations", "collection")));
+        DelinquencyRangeData delinquencyRange = loanDetails.getDelinquencyRange();
+        GetLoansLoanIdDelinquencySummary delinquent = loanDetails.getDelinquent();
 
         eventAssertion.assertEvent(LoanDelinquencyRangeChangeEvent.class, loanId)//
                 .extractingData(loanAccountDelinquencyRangeDataV1 -> {
@@ -654,7 +639,7 @@ public class LoanDelinquencyStepDef extends AbstractStepDef {
                     Long loanLevelDelinquencyRangeIdExpected = delinquencyRange.getId();
                     String loanLevelDelinquencyRangeExpected = delinquencyRange.getClassification();
                     String loanLevelDelinquentDateExpected = FORMATTER.format(delinquent.getDelinquentDate());
-                    BigDecimal loanLevelTotalAmountExpected = BigDecimal.valueOf(delinquent.getDelinquentAmount());
+                    BigDecimal loanLevelTotalAmountExpected = delinquent.getDelinquentAmount();
 
                     assertThat(loanLevelDelinquencyRangeId)//
                             .as(ErrorMessageHelper.wrongValueInLoanDelinquencyRangeChangeBusinessEvent4(loanLevelDelinquencyRangeId,
@@ -707,19 +692,17 @@ public class LoanDelinquencyStepDef extends AbstractStepDef {
     }
 
     @Then("In Loan details delinquent.lastRepaymentAmount is {int} EUR with lastRepaymentDate {string}")
-    public void delinquentLastRepaymentAmountCheck(int expectedLastRepaymentAmount, String expectedLastRepaymentDate) throws IOException {
-        Response<PostLoansResponse> loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
-        long loanId = loanResponse.body().getLoanId();
+    public void delinquentLastRepaymentAmountCheck(int expectedLastRepaymentAmount, String expectedLastRepaymentDate) {
+        PostLoansResponse loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
+        Long loanId = loanResponse.getLoanId();
 
-        Response<GetLoansLoanIdResponse> loanDetails = loansApi.retrieveLoan(loanId, false, "", "", "").execute();
-        ErrorHelper.checkSuccessfulApiCall(loanDetails);
+        GetLoansLoanIdResponse loanDetails = ok(() -> fineractClient.loans().retrieveOneLoan(loanId, Map.of("associations", "collection")));
 
-        Double expectedLastRepaymentAmount1 = Double.valueOf(expectedLastRepaymentAmount);
-        Double actualLastRepaymentAmount = loanDetails.body().getDelinquent().getLastRepaymentAmount();
-        String actualLastRepaymentDate = FORMATTER.format(loanDetails.body().getDelinquent().getLastRepaymentDate());
+        Double actualLastRepaymentAmount = loanDetails.getDelinquent().getLastRepaymentAmount().doubleValue();
+        String actualLastRepaymentDate = FORMATTER.format(loanDetails.getDelinquent().getLastRepaymentDate());
 
         assertThat(actualLastRepaymentAmount)//
-                .as(ErrorMessageHelper.wrongDataInDelinquentLastRepaymentAmount(actualLastRepaymentAmount, expectedLastRepaymentAmount1))//
+                .as(ErrorMessageHelper.wrongDataInDelinquentLastRepaymentAmount(actualLastRepaymentAmount, actualLastRepaymentAmount))//
                 .isEqualTo(expectedLastRepaymentAmount);//
         assertThat(actualLastRepaymentDate)//
                 .as(ErrorMessageHelper.wrongDataInDelinquentLastRepaymentDate(actualLastRepaymentDate, expectedLastRepaymentDate))//
@@ -743,25 +726,24 @@ public class LoanDelinquencyStepDef extends AbstractStepDef {
         return actualValues;
     }
 
-    private void errorMessageAssertation(Response<PostLoansDelinquencyActionResponse> response, int errorCodeExpected,
-            String errorMessageExpected) throws IOException {
-        String errorToString = response.errorBody().string();
-        ErrorResponse errorResponse = GSON.fromJson(errorToString, ErrorResponse.class);
-        String errorMessageActual = errorResponse.getErrors().get(0).getDeveloperMessage();
-        int errorCodeActual = response.code();
+    private void errorMessageAssertationFeign(long loanId, PostLoansDelinquencyActionRequest request, int errorCodeExpected,
+            String errorMessageExpected) {
+        CallFailedRuntimeException exception = fail(() -> fineractClient.loans().createDelinquencyActionLoan(loanId, request));
 
-        assertThat(errorCodeActual).as(ErrorMessageHelper.wrongErrorCode(errorCodeActual, errorCodeExpected)).isEqualTo(errorCodeExpected);
-        assertThat(errorMessageActual).as(ErrorMessageHelper.wrongErrorMessage(errorMessageActual, errorMessageExpected))
-                .isEqualTo(errorMessageExpected);
+        assertThat(exception.getStatus()).as(ErrorMessageHelper.wrongErrorCode(exception.getStatus(), errorCodeExpected))
+                .isEqualTo(errorCodeExpected);
+        assertThat(exception.getDeveloperMessage())
+                .as(ErrorMessageHelper.wrongErrorMessage(exception.getDeveloperMessage(), errorMessageExpected))
+                .contains(errorMessageExpected);
 
-        log.debug("ERROR CODE: {}", errorCodeActual);
-        log.debug("ERROR MESSAGE: {}", errorMessageActual);
+        log.debug("ERROR CODE: {}", exception.getStatus());
+        log.debug("ERROR MESSAGE: {}", exception.getDeveloperMessage());
     }
 
     @Then("LoanDelinquencyRangeChangeBusinessEvent is created")
     public void checkLoanDelinquencyRangeChangeBusinessEventCreated() {
-        Response<PostLoansResponse> loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
-        long loanId = loanResponse.body().getLoanId();
+        PostLoansResponse loanResponse = testContext().get(TestContextKey.LOAN_CREATE_RESPONSE);
+        Long loanId = loanResponse.getLoanId();
 
         eventAssertion.assertEventRaised(LoanDelinquencyRangeChangeEvent.class, loanId);
     }
